"feat: 主なメイン機能の追加

--- a/package.json
+++ b/package.json
@@ -9,31 +9,54 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
-    "type-check:watch": "tsc --noEmit --watch"
+    "type-check:watch": "tsc --noEmit --watch",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "e2e": "playwright test",
+    "e2e:ui": "playwright test --ui",
+    "verify": "npm run type-check && npm run lint && npm run test:run",
+    "verify:full": "npm run type-check && npm run lint && npm run test:run && npm run e2e",
+    "verify:strict": "npm run type-check && npm run lint -- --max-warnings 0 && npm run test:run",
+    "pre-commit": "npm run verify:strict",
+    "dev:debug": "vite --debug --force",
+    "clean": "rm -rf dist node_modules/.vite .eslintcache",
+    "reset": "npm run clean && npm install",
+    "check:deps": "npm audit && npm outdated",
+    "build:analyze": "npm run build && npx vite-bundle-analyzer dist",
+    "start:prod": "npm run build && npm run preview"
   },
   "dependencies": {
-    "axios": "^1.11.0",
-    "framer-motion": "^12.23.12",
-    "lucide-react": "^0.540.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.1",
-    "zustand": "^5.0.8"
+    "axios": "^1.7.7",
+    "framer-motion": "^11.2.10",
+    "lucide-react": "^0.446.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-router-dom": "^6.28.0",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.33.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.0",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2"
+    "@eslint/js": "^8.57.0",
+    "@playwright/test": "^1.48.0",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "14.3.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/node": "^24.3.1",
+    "@types/react": "18.3.5",
+    "@types/react-dom": "18.3.0",
+    "@vitejs/plugin-react": "^4.3.2",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "globals": "^15.3.0",
+    "jsdom": "^24.1.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.10",
+    "typescript": "~5.4.5",
+    "typescript-eslint": "^7.13.1",
+    "vite": "^5.4.11",
+    "vitest": "^1.6.0"
   }
 }
