--- a/.env.development
+++ b/.env.development
@@ -4,10 +4,11 @@
 # API設定
 VITE_API_BASE_URL=http://localhost:3001/api
 VITE_APP_ENV=development
+VITE_PUBLIC_ORIGIN=http://127.0.0.1:5174
 
 # Spotify API設定（開発用）
-VITE_SPOTIFY_CLIENT_ID=your_spotify_client_id_here
-VITE_SPOTIFY_REDIRECT_URI=http://localhost:5173/auth/spotify/callback
+VITE_SPOTIFY_CLIENT_ID=9251917aa4854566880160d8e6d5826f
+VITE_SPOTIFY_REDIRECT_URI=http://127.0.0.1:5174/auth/spotify/callback
 
 # Apple Music API設定（開発用）
 VITE_APPLE_MUSIC_DEVELOPER_TOKEN=your_apple_music_developer_token_here
@@ -15,9 +16,11 @@ VITE_APPLE_MUSIC_DEVELOPER_TOKEN=your_apple_music_developer_token_here
 # その他の設定
 VITE_APP_NAME=Playme
 VITE_APP_VERSION=1.0.0
+VITE_USE_PROXY=true
 
 # ログレベル
 VITE_LOG_LEVEL=debug
+VITE_DEBUG=0
 
 # モック設定
 VITE_ENABLE_MOCKS=true
